# two-tower-video-recsys

./: README.md  pyproject.toml  requirements.txt
src/two_tower_recsys/: cli.py  data.py  metrics.py  model.py  retrieval.py  train.py
