[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "two-tower-video-recsys"
version = "0.1.0"
description = "Two-Tower retrieval recommender demo"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "hnswlib>=0.8.0",
]

[project.scripts]
two-tower = "two_tower_recsys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
